--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>To-Do List</title>
+    <title>List Logic</title>
+    <link rel="icon" href="icon.png" />
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -14,7 +15,7 @@
   </head>
   <body>
     <div class="header">
-      <h1>To-Do List</h1>
+      <h1>List Logic</h1>
     </div>
     <div class="container">
       <input type="text" id="taskInput" placeholder="Add a new task" />
